--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+/* Hide the scrollbar but still allow scrolling */
+
+/* Add a custom scrollbar style */
+body::-webkit-scrollbar {
+    width: 0;
+}
